--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <img src="img/logo.svg" alt="Логотип" class="logo-image">
         </a>
         <a href="#" class="user">
-            <span class="user-name">Артем</span>
+            <span class="user-name">Irinka</span>
             <img src="img/avatar.png" alt="Фото" class="user-foto">
         </a>
         
